[package]
name = "telescope_controller"
version = "0.1.0"
edition = "2021"

[build]
target-dir = "/tmp/cargo-target"

[dependencies]
gilrs = "0.10.2"
serialport = "4.2.1"
rppal = "0.14.1"
clap = { version = "3.1.6", features = ["derive"] }
[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]