[package]
name = "telescope_controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/webserver-main.rs"

[build]
target-dir = "/tmp/cargo-target"

[dependencies]
gilrs = "0.10.2"
rppal = "0.14.1"
clap = { version = "3.1.6", features = ["derive"] }
axum = "0.6.20"
axum-extra = "0.8.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
